# chip8-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  instructions_gperf
.github/workflows/: clang-format-check.yml  ctest-check.yml
src/: CMakeLists.txt  chip8.cpp  chip8.h  common.cpp  common.h  emu.cpp  emu.h  gl_testing.cpp  gl_testing2.cpp  gl_testing3.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  instruction.cpp  instruction.h  key.h  main.cpp  opengl_imgui.cpp  renderer.cpp  renderer.h  rgb.h  rom.h  settings.h  shader.cpp  shader.h  vk_testing.cpp  window.cpp  window.h
src/shaders/: fragment.frag  vertex.vert
test/: CMakeLists.txt  memory.cpp
tests/: CMakeLists.txt  functionality.cpp  helpers.cpp  initialization.cpp  instructions.cpp  tests.cpp
